<?xml version="1.0"?>
<package>
  <name>cmu_demo</name>
  <version>0.0.0</version>
  <description>The cmu_demo package</description>

  <maintainer email="jason.larkin@spiralgen.com">jlarkin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
