<?xml version="1.0"?>
<package>
  <name>cmu_z_test_monitor</name>
  <version>0.0.0</version>
  <description>The cmu_z_test_monitor package</description>

  <maintainer email="jmendoza@todo.todo">jmendoza</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>landshark_msgs</build_depend>
  <build_depend>msg_auth</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>landshark_msgs</run_depend>
  <run_depend>msg_auth</run_depend>

  <export>
  </export>
</package>
