<?xml version="1.0"?>
<package>
  <name>landshark_2dnav</name>
  <version>0.0.0</version>
  <description>The landshark_2dnav package</description>
  <maintainer email="jason.larkin@spiralgen.com">Jason Larkin</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>proj4</build_depend>
<!--  <build_depend>landshark_msgs</build_depend>-->
<!--  <build_depend>landshark_sim</build_depend>-->

<!--  <run_depend>landshark_sim</run_depend>-->
<!--  <run_depend>landshark_msgs</run_depend>-->
  <run_depend>cmake_modules</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>proj4</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->


    </export>
</package>
