<package>
  <name>landshark_description</name>
  <version>1.1.0</version>
  <description>
    This package contains the description (mechanical, kinematic, visual, etc.) of the Landshark.
  </description>
  <author>Thomas de Candia</author>
  <maintainer email="aravind@ai.sri.com">Aravind Sundaresan</maintainer>

  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
