<package>
  <name>landshark_gps</name>
  <version>1.1.0</version>
  <description>
    This module is used to interface the GPS (Garmin 19x HVS) on the Lansdhsark. It communicates with the GPS using a protocol based on the National Marine Electronics Association's NMEA 0183 ASCII interface specification (www.nmea.org).
  </description>
  <author>Thomas de Candia</author>
  <maintainer email="aravind@ai.sri.com">Aravind Sundaresan</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>landshark_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>landshark_msgs</run_depend>
</package>
