<?xml version="1.0"?>
<package>
  <name>landshark_hokuyo</name>
  <version>0.0.0</version>
  <description>A ROS node to provide access to SCIP 2.0-compliant Hokuyo laser range finders (including 04LX).</description>

  <maintainer email="thomas.decandia@sri.com">Thomas de Candia</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>diagnostic_updater</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
