<package>
  <name>landshark_moog</name>
  <version>1.1.0</version>
  <description>landshark_moog: This package provides an interface to control the pan, tilt and zoom of the moog quickset camera.</description>
  <author>Thomas de Candia</author>
  <maintainer email="aravind@ai.sri.com">Aravind Sundaresan</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
