<package>
  <name>landshark_paintball</name>
  <version>1.1.0</version>
  <description>
    This package provides an interface to control the paintball.
  </description>
  <author>Thomas de Candia</author>
  <maintainer email="aravind@ai.sri.com">Aravind Sundaresan</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
