<package>
  <name>landshark_turret</name>
  <version>1.1.0</version>
  <description>
    This package provides an interface to control the turret of the Landshark.
  </description>
  <author>Thomas de Candia</author>
  <maintainer email="aravind@ai.sri.com">Aravind Sundaresan</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>landshark_msgs</build_depend>
  <build_depend>landshark_common</build_depend>
  <build_depend>msg_auth</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>landshark_msgs</run_depend>
  <run_depend>landshark_common</run_depend>
  <run_depend>msg_auth</run_depend>
</package>
