<package>
  <name>upenn_controller</name>
  <version>0.0.0</version>
  <description>
    upenn_controller: This package provides an interface to cruise-control the LandShark AND be resilient against sensor attacks. 
  </description>
  <maintainer email="nicbezzo@seas.upenn.edu">Nicola Bezzo</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>landshark_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>landshark_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

<!--  
  <build_depend>kdl</build_depend>
  <run_depend>kdl</run_depend>
-->
</package>


